--- a/www/ServiceManager/starter-template.css
+++ b/www/ServiceManager/starter-template.css
@@ -86,6 +86,20 @@ input[type="radio"].radio:disabled + label {
 	background-color: rgba(86,61,124,.15);
 }
 
+
+.fullLog {
+	border: 1px solid rgba(86,61,124,.2);
+	background-color: rgb(100,100,100);
+	color: rgb(255,255,255);
+	margin: 0;
+	display: none;
+	font-size: 9px;
+}
+
+.fullLog p {
+	margin: 1px;
+}
+
 /*.orchestratorLog {
 	height: 400px;
 }*/
