--- a/www/ServiceManager/starter-template.css
+++ b/www/ServiceManager/starter-template.css
@@ -1,3 +1,5 @@
+@import "LigatureSymbols/style.css";
+
 body {
   padding-top: 50px;
 }
@@ -16,6 +18,7 @@ body {
   left: 0;
 } 
 
+
 .logContent{
 	font-size: 11px;
 }
@@ -24,14 +27,15 @@ input[type="checkbox"].checkbox {
 	display: none;
 	}
 input[type="checkbox"].checkbox + label {
+	top: 2px;
 	display: inline;
 	position: relative;
-	background-color: #b94a48;
+	background-color: #D9534F;
 	/*label styling*/
-	padding: 2px 4px;
+	padding: 3px 5px;
 	margin: 2px;
-	font-size: 11.844px;
-	font-weight: bold;
+	font-size: 12px;
+	font-weight: normal;
 	line-height: 14px;
 	color: #ffffff;
 	vertical-align: baseline;
@@ -42,7 +46,7 @@ input[type="checkbox"].checkbox + label {
 	border-radius: 3px;
 	}
 input[type="checkbox"].checkbox:checked + label {
-	background-color: #468847;
+	background-color: #5CB85C;
 	}
 input[type="checkbox"].checkbox:disabled + label {
 	opacity: 0.5;
@@ -55,12 +59,12 @@ input[type="radio"].radio {
 input[type="radio"].radio + label {
 	display: inline;
 	position: relative;
-	background-color: #b94a48;
+	background-color: #D9534F;
 	/*label styling*/
 	padding: 2px 4px;
 	margin: 2px;
-	font-size: 11.844px;
-	font-weight: bold;
+	font-size: 12px;
+	font-weight: normal;
 	line-height: 14px;
 	color: #ffffff;
 	vertical-align: baseline;
@@ -71,7 +75,7 @@ input[type="radio"].radio + label {
 	border-radius: 3px;
 	}
 input[type="radio"].radio:checked + label {
-	background-color: #468847;
+	background-color: #5CB85C;
 	}
 input[type="radio"].radio:disabled + label {
 	opacity: 0.5;
@@ -134,4 +138,11 @@ input[type="radio"].radio:disabled + label {
 	width: 600px;
 }
 
+.ctlchekbox{
+	right:0px;
+	float: right;
+}
+.ctlchekbox.fend{
+	padding-right: 15px;
+}
 
